--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
+    "next-easy-middlewares": "^1.0.9",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "substring": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
