--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "fs": "^0.0.1-security",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
-    "next": "14.1.0",
+    "next": "^14.1.4",
     "next-easy-middlewares": "^1.0.9",
     "react": "^18",
     "react-dom": "^18",
