functioning user/player registration

--- a/package.json
+++ b/package.json
@@ -15,14 +15,16 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.11",
+    "auth0": "^4.3.1",
     "aws4": "^1.12.0",
+    "axios": "^1.6.8",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "next": "^14.1.4",
     "next-easy-middlewares": "^1.0.9",
-    "react": "^18",
+    "react": "^18.2.0",
     "react-dom": "^18",
     "substring": "^1.0.0"
   },
