--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/material": "^5.15.11",
+    "@vis.gl/react-google-maps": "^0.8.3",
     "auth0": "^4.3.1",
     "aws4": "^1.12.0",
     "axios": "^1.6.8",
